--- a/public/signin.html
+++ b/public/signin.html
@@ -1,10 +1,10 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="signin.css" />
   </head>
   <body>
     <div class="form-container">
@@ -18,23 +18,29 @@
         <button class="form-btn">Log In</button>
       </form>
       <p class="sign-up-label">
-        Already have an account?<a href="index.html" class="sign-up-link">Sign up</a>
+        Already have an account?
+        <span><a href="index.html" class="sign-up-link">Sign up</a></span>
       </p>
       <div class="buttons-container">
-        <div class="apple-login-button">
-          <svg
-            stroke="currentColor"
-            fill="currentColor"
-            stroke-width="0"
-            class="apple-icon"
-            viewBox="0 0 1024 1024"
-            height="1em"
-            width="1em"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"></path>
-          </svg>
-          <span>Log in with Apple</span>
+      
+        <div class="github-login-button">
+          <span class="icon-bg">
+            <svg
+              stroke="currentColor"
+              fill="currentColor"
+              stroke-width="0"
+              class="github-icon"
+              viewBox="0 0 48 48"
+              height="1em"
+              width="1em"
+              xmlns="http://www.w3.org/2000/svg">
+              <circle cx="24" cy="24" r="24" fill="#24292f"/>
+              <path
+                fill="#fff"
+                d="M24 9C16.268 9 10 15.268 10 23c0 6.075 3.938 11.225 9.406 13.042.687.127.938-.298.938-.662 0-.327-.012-1.193-.018-2.342-3.827.832-4.634-1.844-4.634-1.844-.625-1.588-1.527-2.012-1.527-2.012-1.25-.855.094-.838.094-.838 1.382.098 2.11 1.42 2.11 1.42 1.23 2.108 3.227 1.5 4.016 1.148.125-.89.48-1.5.872-1.846-3.055-.348-6.266-1.527-6.266-6.8 0-1.502.537-2.73 1.418-3.692-.142-.348-.615-1.75.135-3.648 0 0 1.156-.37 3.793 1.41A13.18 13.18 0 0 1 24 16.844c1.172.006 2.355.158 3.457.463 2.637-1.78 3.791-1.41 3.791-1.41.752 1.898.279 3.3.137 3.648.883.962 1.416 2.19 1.416 3.692 0 5.287-3.215 6.448-6.281 6.792.492.426.93 1.27.93 2.562 0 1.85-.017 3.342-.017 3.797 0 .367.25.797.945.66C34.065 34.222 38 29.073 38 23c0-7.732-6.268-14-14-14z"/>
+            </svg>
+          </span>
+          <span>Log in with GitHub</span>
         </div>
         <div class="google-login-button">
           <svg
@@ -72,4 +78,4 @@ c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.
       </div>
     </div>
   </body>
-</html> -->
+</html>
