--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./Css/index.css" />
   </head>
   <body>
     <div class="form-container">
@@ -80,5 +80,5 @@ c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.
       </div>
     </div>
   </body>
-  <script type="module" src="index.js"></script>
+  <script type="module" src="./Scripts/index.js"></script>
 </html>
