--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
           </span>
           <span>Log in with GitHub</span>
         </div>
-        <div class="google-login-button">
+        <div onclick="signUpGoogle()" class="google-login-button">
           <svg
             stroke="currentColor"
             fill="currentColor"
@@ -80,5 +80,5 @@ c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.
       </div>
     </div>
   </body>
-  <script type="module" src="./Scripts/index.js"></script>
+  <script type="module" src="Scripts/index.js"></script>
 </html>
