--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./Css/index.css" />
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   </head>
   <body>
     <div class="form-container">
@@ -13,7 +15,7 @@
         <input id="uName" type="text" class="input" placeholder="Username" />
         <input id="mail" type="email" class="input" placeholder="Email" />
         <input id="pass" type="password" class="input" placeholder="Password" />
-        <!-- <i id="show" class="bi bi-eye">&#xf341;</i> -->
+        <!-- <i id="show" class="bi bi-eye"></i> -->
         <p class="page-link">
           <span class="page-link-label">Forgot Password?</span>
         </p>
@@ -81,5 +83,6 @@ c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.
       </div>
     </div>
   </body>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script type="module" src="Scripts/index.js"></script>
 </html>
