--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Dashboard</h1>
-</body>
+  </head>
+  <body>
+    <div id="show"></div>
+    <input id="todo" type="text">
+    <button onclick="addToDo()">Add</button>
+  </body>
+  <script type="module" src="Scripts/dashboard.js
+  "></script>
 </html>
