--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -7,9 +7,11 @@
   </head>
   <body>
     <div id="show"></div>
-    <input id="todo" type="text">
+    <input id="todo" type="text" />
     <button onclick="addToDo()">Add</button>
   </body>
-  <script type="module" src="Scripts/dashboard.js
+  <script
+    type="module"
+    src="Scripts/dashboard.js
   "></script>
 </html>
