--- a/public/signin.html
+++ b/public/signin.html
@@ -5,26 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./Css/signin.css" />
+    <!-- BOOSTRAP LINK -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <!-- Toastify -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <div class="form-container">
       <p class="title">Welcome back</p>
       <form class="form">
         <input id="mail" type="email" class="input" placeholder="Email" />
-        <input id="pass" type="password" class="input" placeholder="Password" />
+        <div class="input-icon-group">
+          <input
+            id="pass"
+            type="password"
+            class="input with-icon"
+            placeholder="Password" />
+          <span class="input-icon">
+            <i id="show" class="bi bi-eye fs-5"></i>
+          </span>
+        </div>
         <p class="page-link">
           <span class="page-link-label">Forgot Password?</span>
         </p>
-        <button type="button" onclick="signInUser()" class="form-btn">Log In</button>
+        <button type="button" onclick="signInUser()" class="form-btn">
+          Log In
+        </button>
       </form>
       <p class="sign-up-label">
         Already have an account?
         <span><a href="index.html" class="sign-up-link">Sign up</a></span>
       </p>
       <div class="buttons-container">
-      
         <div class="github-login-button">
           <span class="icon-bg">
             <svg
@@ -36,10 +58,10 @@
               height="1em"
               width="1em"
               xmlns="http://www.w3.org/2000/svg">
-              <circle cx="24" cy="24" r="24" fill="#24292f"/>
+              <circle cx="24" cy="24" r="24" fill="#24292f" />
               <path
                 fill="#fff"
-                d="M24 9C16.268 9 10 15.268 10 23c0 6.075 3.938 11.225 9.406 13.042.687.127.938-.298.938-.662 0-.327-.012-1.193-.018-2.342-3.827.832-4.634-1.844-4.634-1.844-.625-1.588-1.527-2.012-1.527-2.012-1.25-.855.094-.838.094-.838 1.382.098 2.11 1.42 2.11 1.42 1.23 2.108 3.227 1.5 4.016 1.148.125-.89.48-1.5.872-1.846-3.055-.348-6.266-1.527-6.266-6.8 0-1.502.537-2.73 1.418-3.692-.142-.348-.615-1.75.135-3.648 0 0 1.156-.37 3.793 1.41A13.18 13.18 0 0 1 24 16.844c1.172.006 2.355.158 3.457.463 2.637-1.78 3.791-1.41 3.791-1.41.752 1.898.279 3.3.137 3.648.883.962 1.416 2.19 1.416 3.692 0 5.287-3.215 6.448-6.281 6.792.492.426.93 1.27.93 2.562 0 1.85-.017 3.342-.017 3.797 0 .367.25.797.945.66C34.065 34.222 38 29.073 38 23c0-7.732-6.268-14-14-14z"/>
+                d="M24 9C16.268 9 10 15.268 10 23c0 6.075 3.938 11.225 9.406 13.042.687.127.938-.298.938-.662 0-.327-.012-1.193-.018-2.342-3.827.832-4.634-1.844-4.634-1.844-.625-1.588-1.527-2.012-1.527-2.012-1.25-.855.094-.838.094-.838 1.382.098 2.11 1.42 2.11 1.42 1.23 2.108 3.227 1.5 4.016 1.148.125-.89.48-1.5.872-1.846-3.055-.348-6.266-1.527-6.266-6.8 0-1.502.537-2.73 1.418-3.692-.142-.348-.615-1.75.135-3.648 0 0 1.156-.37 3.793 1.41A13.18 13.18 0 0 1 24 16.844c1.172.006 2.355.158 3.457.463 2.637-1.78 3.791-1.41 3.791-1.41.752 1.898.279 3.3.137 3.648.883.962 1.416 2.19 1.416 3.692 0 5.287-3.215 6.448-6.281 6.792.492.426.93 1.27.93 2.562 0 1.85-.017 3.342-.017 3.797 0 .367.25.797.945.66C34.065 34.222 38 29.073 38 23c0-7.732-6.268-14-14-14z" />
             </svg>
           </span>
           <span>Log in with GitHub</span>
@@ -80,6 +102,8 @@ c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.
       </div>
     </div>
   </body>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script type="module" src="Scripts/signin.js"></script>
 </html>
