--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,6 +9,7 @@
     <div id="show"></div>
     <input id="todo" type="text" />
     <button onclick="addToDo()">Add</button>
+    <div id="display"></div>
   </body>
   <script
     type="module"
